Add new skills to shop and war machines